--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   shared_preferences: ^2.0.15
   form_field_validator: ^1.1.0
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
