--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.0.15
   form_field_validator: ^1.1.0
   cached_network_image: ^3.2.1
+  firebase_core: ^1.20.1
+  firebase_auth: ^3.6.3
 
 dev_dependencies:
   flutter_test:
